--- a/css/styles.css
+++ b/css/styles.css
@@ -751,7 +751,10 @@ nav {
 
 .modal-dialog {
   max-width: 900px;
-  /*background-color: #fff;*/
+}
+
+.modal-bg-wh {
+  background-color: #fff;
 }
 
 .modal-dialog .modal-content {
