--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,42 @@
 @charset "UTF-8";
 
+/*@font-face {
+  font-family: 'PFRegalDisplayPro-Reg';
+    src: url('/media/couture/font/pf-togas2/pfregaldisplaypro-reg.eot');
+    src: url('/media/couture/font/pf-togas2/pfregaldisplaypro-reg.eot?#iefix') format('/media/couture/font/pf-togas2/embedded-opentype'),
+         url('/media/couture/font/pf-togas2/pfregaldisplaypro-reg.woff2') format('woff2'),
+         url('/media/couture/font/pf-togas2/pfregaldisplaypro-reg.woff') format('woff'),
+         url('/media/couture/font/pf-togas2/pfregaldisplaypro-reg.ttf') format('truetype'),
+         url('/media/couture/font/pf-togas2/pfregaldisplaypro-reg.svg#pf_regal_display_proregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+  font-family: 'PFRegalDisplayPro-Medium';
+    src: url('/media/couture/font/pf-togas2/pfregaldisplaypro-medium.eot');
+    src: url('/media/couture/font/pf-togas2/pfregaldisplaypro-medium.eot?#iefix') format('embedded-opentype'),
+         url('/media/couture/font/pf-togas2/pfregaldisplaypro-medium.woff2') format('woff2'),
+         url('/media/couture/font/pf-togas2/pfregaldisplaypro-medium.woff') format('woff'),
+         url('/media/couture/font/pf-togas2/pfregaldisplaypro-medium.ttf') format('truetype'),
+         url('/media/couture/font/pf-togas2/pfregaldisplaypro-medium.svg#pf_regal_display_promedium') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+  font-family: 'PFRegalDisplayPro-MedItalic';
+    src: url('/media/couture/font/pf-togas2/pfregaldisplaypro-meditalic.eot');
+    src: url('/media/couture/font/pf-togas2/pfregaldisplaypro-meditalic.eot?#iefix') format('embedded-opentype'),
+         url('/media/couture/font/pf-togas2/pfregaldisplaypro-meditalic.woff2') format('woff2'),
+         url('/media/couture/font/pf-togas2/pfregaldisplaypro-meditalic.woff') format('woff'),
+         url('/media/couture/font/pf-togas2/pfregaldisplaypro-meditalic.ttf') format('truetype'),
+         url('/media/couture/font/pf-togas2/pfregaldisplaypro-meditalic.svg#pf_regal_display_proMdIt') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}*/
+
 @font-face {
   font-family: 'PFRegalDisplayPro-Reg';
   src: url("/media/couture/font/pf-togas/PFRegalDisplayPro-Reg_0.eot");
@@ -23,6 +60,7 @@
   font-weight: normal;
   font-style: normal;
 }
+
 
 @font-face {
   font-family: 'PFBagueSansPro-Medium';
