--- a/css/styles.css
+++ b/css/styles.css
@@ -271,7 +271,7 @@ header,
 }
 
 #intro {
-  background: url("/media/couture/img/img-togas-lp3/slider1-sh.jpg") no-repeat center center fixed;
+  background: url("/media/couture/img/img-togas-lp3/slider1-sh.jpg?v=2") no-repeat center center fixed;
   -webkit-background-size: cover;
   background-size: cover;
 }
@@ -334,7 +334,7 @@ p {
   color: #fff;
   font-size: 100%;
   padding-right: 0px;
-  padding-left: 18px;
+  padding-left: 4em;
 }
 
 
@@ -343,9 +343,9 @@ p {
 
 .btn-outline-bronze {
   font-family: 'PFBagueSansPro-Bold';
-  font-size: 0.6em;
+  font-size: 0.55em;
   text-transform: uppercase;
-  letter-spacing: 3px;
+  letter-spacing: 0.43em;
   color: #fff;
   padding: 0.5rem 0.8rem !important;
   -webkit-border-radius: 0rem;
@@ -387,11 +387,11 @@ p {
 
 .btn-fill {
   font-family: 'PFBagueSansPro-Bold';
-  font-size: 0.6em;
+  font-size: 0.55em;
   text-transform: uppercase;
-  letter-spacing: 3px;
+  letter-spacing: 0.43em;
   color: #fff !important;
-  padding: 0.5rem 0.8rem !important;
+  padding: 0.5rem 1.3rem !important;
   -webkit-border-radius: 0rem;
   border-radius: 0rem;
   background-color: #B49256;
@@ -496,11 +496,11 @@ p {
 /* NAVIGATION TOP*/
 
 .nav-togas > li > a {
-  font-family: 'PFBagueSansPro-Medium';
+  font-family: 'PFBagueSansPro-Light';
   text-transform: uppercase;
   color: #ffffff;
-  font-size: 0.7em;
-  letter-spacing: 3px;
+font-size: 0.8em;
+letter-spacing: 0.2em;
 }
 
 .nav-togas > li > a:hover {
@@ -1196,5 +1196,8 @@ p {
   margin-top: 40px;
 }
 
+.container-header-fluid {
+max-width: 1900px;
+}
 
 /*# sourceMappingURL=styles.css.map */
