--- a/css/styles.css
+++ b/css/styles.css
@@ -270,12 +270,12 @@ header,
   height: 100%;
 }
 
-#intro {
+/*#intro {
   background: url("/media/couture/img/img-togas-lp3/slider1-sh.jpg?v=2") no-repeat center center fixed;
   -webkit-background-size: cover;
   background-size: cover;
 }
-
+*/
 
 p {
   font-size: 1em;
@@ -505,8 +505,8 @@ letter-spacing: 0.2em;
 
 .nav-togas > li > a:hover {
   color: #B49256;
-  font-size: 0.7em;
-  letter-spacing: 3px;
+font-size: 0.8em;
+letter-spacing: 0.2em;
 }
 
 /* REMOVE BOOTSTRAP NAVBAR SHADOW */
@@ -890,13 +890,13 @@ p {
 }
 
 .logo {
-  -webkit-box-sizing: border-box;
+/*  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   word-wrap: break-word;
   margin-left: 15px;
   margin-right: 15px;
   width: -webkit-calc(50% - 30px);
-  width: calc(50% - 30px);
+  width: calc(50% - 30px);*/
 }
 
 .offer {
@@ -1026,8 +1026,9 @@ p {
   }
 
   .logo {
-    width: -webkit-calc(58.33333% - 30px);
-    width: calc(58.33333% - 30px);
+/*    width: -webkit-calc(58.33333% - 30px);
+    width: calc(58.33333% - 30px);*/
+    width: 620px;
   }
 
   .third-col {
@@ -1069,8 +1070,9 @@ p {
   }
 
   .logo {
-    width: -webkit-calc(66.66667% - 30px);
-    width: calc(66.66667% - 30px);
+/*    width: -webkit-calc(66.66667% - 30px);
+    width: calc(66.66667% - 30px);*/
+    width: 620px;
   }
 
   .third-col {
@@ -1115,8 +1117,9 @@ p {
   }
 
   .logo {
-    width: -webkit-calc(100% - 30px);
-    width: calc(100% - 30px);
+/*    width: -webkit-calc(100% - 30px);
+    width: calc(100% - 30px);*/
+    width: 620px;
   }
 
   .offer__title {
@@ -1198,6 +1201,149 @@ p {
 
 .container-header-fluid {
 max-width: 1900px;
+}
+
+/* FULL SCREEN CAROUSEL  MDB */
+
+header {
+  position: relative;
+  text-align: center;
+}
+
+.header-block {
+  position: absolute;
+  z-index: 1;
+  text-align: center;
+  width: 100%;
+}
+
+.carousel-bg {
+  background-color: #000;
+}
+
+/* carousel-indicators ////////////////////////////////////// */
+
+.carousel-indicators {
+  position: absolute;
+  right: 0;
+  bottom: 35px;
+  left: 0;
+  z-index: 15;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  padding-left: 0;
+  margin-right: 15%;
+  margin-left: 15%;
+  list-style: none;
+}
+
+.carousel .carousel-indicators li {
+width: 6rem;
+height: 0.25rem;
+border-radius: 0;
+  cursor: pointer;
+}
+
+.carousel-indicators li {
+  position: relative;
+  -webkit-box-flex: 0;
+  -ms-flex: 0 1 auto;
+  flex: 0 1 auto;
+  width: 90px;
+  height: 2px;
+  margin-right: 0px;
+  margin-left: 0px;
+  text-indent: -999px;
+  background-color: rgba(255, 255, 255, 0);
+}
+
+.carousel-indicators li::before {
+width: 6rem;
+height: 0.08rem;
+background-color: #B49256;
+top: 2px;
+}
+
+.carousel-indicators li::after {
+  position: absolute;
+  bottom: -10px;
+  left: 0;
+  display: inline-block;
+  width: 100%;
+  height: 10px;
+  content: "";
+}
+
+.carousel-indicators .active {
+  background-color: #B49256;
+}
+
+
+
+.carousel-fade .carousel-item {
+  opacity: 0;
+/*  opacity: 0;
+  -webkit-transition-duration: 1.6s;
+  -o-transition-duration: 1.6s;
+  transition-duration: 1.6s;
+  -webkit-transition-property: opacity;
+  -o-transition-property: opacity;
+  transition-property: opacity;*/
+
+/*    position: relative;
+  display: none;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  width: 100%;*/
+  transition: -webkit-transform 0.6s ease-in-out;
+  transition: transform 0.6s ease-in-out;
+  transition: transform 0.6s ease-in-out, 
+  -webkit-transform 0.6s ease-in-out;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-perspective: 1000px;
+  perspective: 1000px;
+    -webkit-transition-property: opacity;
+  -o-transition-property: opacity;
+  transition-property: opacity;
+}
+
+/* SET  transition-duration: 0.6s; IF BLINK */
+
+/*.carousel-fade .carousel-item .active {
+  opacity: 0;
+  -webkit-transition-duration: 1.6s;
+  -o-transition-duration: 1.6s;
+  transition-duration: 1.6s;
+  -webkit-transition-property: opacity;
+  -o-transition-property: opacity;
+  transition-property: opacity;
+}
+*/
+.carousel-fade .carousel-item.active,
+.carousel-fade .carousel-item-next.carousel-item-left,
+.carousel-fade .carousel-item-prev.carousel-item-right {
+  opacity: 1;
+
+}
+
+.carousel-fade .carousel-item-left.active,
+.carousel-fade .carousel-item-right.active {
+  opacity: 0;
+}
+
+/* custom-made */
+.sub-title-custom {
+  font-family: 'PFRegalDisplayPro-Medium';
+  font-size: 1.9em;
+  letter-spacing: 0.35em;
+  font-variant: small-caps;
+  color: #B49256;
 }
 
 /*# sourceMappingURL=styles.css.map */
