--- a/css/styles.css
+++ b/css/styles.css
@@ -2021,8 +2021,94 @@ input[type=radio]:checked + label::before {
   padding-top: 140px;
  margin-left: -35px;
  color: #CCCCCC;
+
 }
 
+
+/* Necessary for full page carousel*/
+    html,
+    body,
+    /*.view */{
+      height: 100%;
+    }
+
+    /* Carousel*/
+    .carousel,
+    .carousel-item,
+    .carousel-item.active {
+      height: 100%;
+    }
+    .carousel-inner {
+      height: 100%;
+    }
+    .carousel-item:nth-child(1) {
+      background-image: url("https://media1.togas.com/media/couture/img/img-togas-lp3/slider1-sh.jpg?v=2");
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center center;
+    }
+    .carousel-item:nth-child(2) {
+      background-image: url("https://media1.togas.com/media/couture/img/img-togas-lp3/slider2-sh.jpg");
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center center;
+    }
+    .carousel-item:nth-child(3) {
+      background-image: url("https://media1.togas.com/media/couture/img/img-togas-lp3/slider3-sh.jpg");
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center center;
+    }
+
+
+
+/* Modal */
+
+  .modal {
+/*    display: inline-block;*/
+/*    vertical-align: middle;*/
+/*    content: " ";
+    height: 100%;*/
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* THUMBCAROUSEL */
+
+/*.product-slider { padding: ; }
+
+.product-slider #carousel { border: 4px solid #1089c0; margin: 0; }
+
+.product-slider #thumbcarousel { margin: 12px 0 0; padding: 0 45px; }
+
+.product-slider #thumbcarousel .item { text-align: center; }
+
+.product-slider #thumbcarousel .item .thumb { border: 4px solid #cecece; width: 20%; margin: 0 2%; display: inline-block; vertical-align: middle; cursor: pointer; max-width: 98px; }
+
+.product-slider #thumbcarousel .item .thumb:hover { border-color: #1089c0; }
+
+.product-slider .item img { width: 100%; height: auto; }
+
+.carousel-control { color: #0284b8; text-align: center; text-shadow: none; font-size: 30px; width: 30px; height: 30px; line-height: 20px; top: 23%; }
+
+.carousel-control:hover, .carousel-control:focus, .carousel-control:active { color: #333; }
+
+.carousel-caption, .carousel-control .fa { font: normal normal normal 30px/26px FontAwesome; }
+.carousel-control { background-color: rgba(0, 0, 0, 0); bottom: auto; font-size: 20px; left: 0; position: absolute; top: 30%; width: auto; }
+
+.carousel-control.right, .carousel-control.left { background-color: rgba(0, 0, 0, 0); background-image: none; }*/
+
+/* /THUMBCAROUSEL */
 
 
 
