FW: Done: 1.Slideshow: autoplayTimeout:10000; 2.Social buttons link to the appropriate pages; 3.Buttons "Book an appointment" & "Call an expert" have also modal Contact Form.   What should we do with buttons "Get a quote", "Get in touch" and "Shop now"?

--- a/css/styles.css
+++ b/css/styles.css
@@ -2062,15 +2062,32 @@ input[type=radio]:checked + label::before {
     }
 
 
+/* Social links  */
+.txt-line a {
+  color: #232323;
+}
+
+.txt-line a::hover {
+  color: #B49256;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* Modal */
 
-  .modal {
-/*    display: inline-block;*/
-/*    vertical-align: middle;*/
-/*    content: " ";
-    height: 100%;*/
-  }
 
 
 
