--- a/css/styles.css
+++ b/css/styles.css
@@ -1905,7 +1905,6 @@ input[type=radio]:checked + label::before {
 /* NAV FOR SECTION "OUR STORY" */
 
 .controls-story {
-  /*background-color: gold;*/
   height: 140px;
   width: auto;
 }
@@ -1923,17 +1922,15 @@ input[type=radio]:checked + label::before {
 }
 
 .nav-pills .nav-link {
-  background-image: url('/media/couture/img/img-togas-lp3/dot2.png');
-  background-repeat: no-repeat;
-  background-position: center center;
+  background-image: url('/media/couture/img/img-togas-lp3/dot2.png') no-repeat center center;
   border-radius: 0;
   height: 140px;
   width: 2.5em;
 }
 
 .nav-link {
-    display: block;
-    padding: 0.3rem 2.4rem;
+  display: block;
+  padding: 0.3rem 2.4rem;
 }
 
 .nav-pills .nav-link a {
@@ -1942,32 +1939,14 @@ input[type=radio]:checked + label::before {
 
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
-  background-image: url('/media/couture/img/img-togas-lp3/dot1.png');
-  background-repeat: no-repeat;
-  background-position: center center;
+  background: transparent url('/media/couture/img/img-togas-lp3/dot1.png') no-repeat center center;
   color: #232323;
-  background-color: transparent;
   width: 2.5em;
 }
 
-
 .nav-pills .nav-link span{
   display: none;
- /* opacity: 0;*/
-}
-
-.nav-pills .nav-link.active span{
-  display: block;
-  font-family: 'PFRegalDisplayPro-Medium';
-  font-size: 2em;
-  letter-spacing: 0.01em;
-  width: 2em;
-  padding-top: 140px;
-  margin-left: -35px;
-}
-
-.nav-pills .nav-link.active span:hover{
-  display: block;
+  opacity: 0;
   font-family: 'PFRegalDisplayPro-Medium';
   font-size: 2em;
   letter-spacing: 0.01em;
@@ -1975,22 +1954,24 @@ input[type=radio]:checked + label::before {
   padding-top: 140px;
   margin-left: -35px;
   color: #232323;
+}
+
+.nav-pills .nav-link.active span, 
+.nav-pills .nav-link.active span:hover,
+.nav-pills .nav-link:hover span {
+  display: block;
   opacity: 1;
-/*  -webkit-transition: 0.2s ease-out;
-  -o-transition: 0.2s ease-out;*/
-  transition: transparent 0.2s ease-out;
+/*  -webkit-transition: transparent 0.2s ease-out;
+  -o-transition: transparent 0.2s ease-out;*/
+  transition: all 1s ease-out;
 }
 
 .nav-pills .nav-link:hover span{
-  display: block;
-  font-family: 'PFRegalDisplayPro-Medium';
-  font-size: 2em;
-  letter-spacing: 0.01em;
-  width: 2em;
-  padding-top: 140px;
-  margin-left: -35px;
   color: #CCCCCC;
+}
 
+.nav-pills .nav-link.active span:hover {
+  color: #232323;
 }
 
 
