--- a/css/styles.css
+++ b/css/styles.css
@@ -1922,7 +1922,7 @@ input[type=radio]:checked + label::before {
 }
 
 .nav-pills .nav-link {
-  background-image: url('/media/couture/img/img-togas-lp3/dot2.png') no-repeat center center;
+  background: url('/media/couture/img/img-togas-lp3/dot2.png') no-repeat center center;
   border-radius: 0;
   height: 140px;
   width: 2.5em;
@@ -1961,9 +1961,9 @@ input[type=radio]:checked + label::before {
 .nav-pills .nav-link:hover span {
   display: block;
   opacity: 1;
-/*  -webkit-transition: transparent 0.2s ease-out;
-  -o-transition: transparent 0.2s ease-out;*/
-  transition: all 1s ease-out;
+  -webkit-transition: transparent 1s ease-out;
+  -o-transition: transparent 1s ease-out;
+  transition: transparent 1s ease-out;
 }
 
 .nav-pills .nav-link:hover span{
