--- a/css/styles.css
+++ b/css/styles.css
@@ -1961,8 +1961,8 @@ input[type=radio]:checked + label::before {
 .nav-pills .nav-link:hover span {
   display: block;
   opacity: 1;
-/*  -webkit-transition: transparent 1s ease-out;
-  -o-transition: transparent 1s ease-out;*/
+  -webkit-transition: all 1s ease;
+  -o-transition: all 1s ease;
   transition: all 1s ease;
 }
 
