--- a/css/styles.css
+++ b/css/styles.css
@@ -657,6 +657,13 @@ nav {
   color: #9D9D9C;
   letter-spacing: 0.003rem;
   line-height: 1.6rem;
+  opacity: 1;
+  transition: opacity 1s ease;
+}
+
+.fade {
+    opacity: 0;
+    transition: opacity 2s ease;
 }
 
 .transition {
@@ -1922,7 +1929,7 @@ input[type=radio]:checked + label::before {
 }
 
 .nav-pills .nav-link {
-  background: url('/media/couture/img/img-togas-lp3/dot2.png') no-repeat center center;
+  background: url('../img/img-togas-lp3/dot2.png') no-repeat center;
   border-radius: 0;
   height: 140px;
   width: 2.5em;
@@ -1939,7 +1946,7 @@ input[type=radio]:checked + label::before {
 
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
-  background: transparent url('/media/couture/img/img-togas-lp3/dot1.png') no-repeat center center;
+  background: transparent url('../img/img-togas-lp3/dot1.png') no-repeat center;
   color: #232323;
   width: 2.5em;
 }
@@ -1961,9 +1968,9 @@ input[type=radio]:checked + label::before {
 .nav-pills .nav-link:hover span {
   display: block;
   opacity: 1;
-  -webkit-transition: all 1s ease;
-  -o-transition: all 1s ease;
-  transition: all 1s ease;
+  -webkit-transition: opacity 1s ease-out;
+  -o-transition: opacity 1s ease-out;
+  transition: opacity 1s ease-out;
 }
 
 .nav-pills .nav-link:hover span{
