--- a/css/styles.css
+++ b/css/styles.css
@@ -2164,6 +2164,7 @@ input[type=radio]:checked + label::before {
 /* Collapce cards styles */
 .container-collapse {
   max-width: 1046px;
+  position: relative;
 }
 
 .card-tg {
@@ -2217,8 +2218,31 @@ input[type=radio]:checked + label::before {
   background-color: #fff;
 }
 
+.bind::before {
+height: 50px;
+border-left: 1px solid #B49256;
+margin-top: -3.1rem;
+margin-left: 10.4rem;
+content: "";
+opacity: 1;
+transition: opacity 1s ease;
+}
 
+.bind-absolute {
+  display: none;
+  /*display: block;*/
+  position: absolute;
+  margin-top: -50px;
+  width: 20px;
+  height: 50px;
+  background-color: #000;
+  content: "test .bind-absolute";
+}
 
+.fade-collapse {
+  opacity: 0;
+  transition: opacity 1s ease;
+}
 
 
 /*# sourceMappingURL=styles.css.map */
